add conection to db

--- a/notebook_tfm.ipynb
+++ b/notebook_tfm.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "ca3f1cfc",
    "metadata": {},
    "outputs": [],
@@ -43,8 +43,8 @@
     "import duckdb\n",
     "\n",
     "# Cargar los datos desde DuckDB\n",
-    "conn = duckdb.connect('devlake_data.duckdb')\n",
-    "data = conn.execute(\"SELECT * FROM ds_pr_time_summary_monthly\").df()"
+    "conn = duckdb.connect('devlake_data.duckdb', read_only=True)\n",
+    "data = conn.execute(\"SELECT * FROM pr_metrics_full\").df()"
    ]
   },
   {
